# glulum

./: CMakeLists.txt  README.md
src/: main.cpp  pendulum.cpp  pendulum.h
